--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>  
    		<nav>
 			<ul>
-                 
+                <li class="logo"><img class="logo" src="img/suntour.png" alt=""></li>
 				<li><a href="index.html">home</a></li>
 				<li><a href="vlieg.html">flight tickets</a></li>
 				<li><a href="auto.html">car rental</a></li>
@@ -18,11 +18,9 @@
 				<li><a href="gasten.html">guestbook</a></li>
 				<li><a href="winter.html">snow vacations</a></li>
 				<li><a href="zon.html">sun vacations</a></li>
+				
 			</ul>
 		</nav>
-    <div id="head">
-		<img class="logo" src="img/suntour.png" alt="">
-    </div>
     <section id="main">
      <h2 style="text-align:center;">welcome to the suntours international website</h2>
      <article id="txt">
@@ -37,7 +35,8 @@
        <h4 style="text-align:center;">our service desk is opend from 10:00 to 17:00</h4>
        <h4 style="text-align:center;">from monday to friday</h4>
     <article id="review">
-        <table>
+        <table id="rvw">
+          <tr><th>Reviews</th></tr>
            <tr>
                <th>user</th>
            </tr>
@@ -48,6 +47,8 @@
             <tr><td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, est.</td></tr>
             <tr><th>user3</th></tr>
             <tr><td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse officiis quia laboriosam hic.</td></tr>
+            <tr><th>user4</th></tr>
+            <tr><td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis eligendi suscipit porro blanditiis voluptatibus.</td></tr>
         </table>
     </article>
     </section>
